--- a/CityInfo.API/appsettings.json
+++ b/CityInfo.API/appsettings.json
@@ -6,5 +6,13 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+
+  "mailSettings": {
+    "mailToAddress": "developer@mycompany.com",
+    "mailFromAddress": "noreply@mycompany.com"
+  },
+  "connectionstrings": {
+    "cityInfoDBConnectionString": "Server = (localdb)\\MSSQLLocalDB;Database=CityInfoDB;Trusted_Connection=True;"
   }
 }
